chore: update docs

--- a/docs/api/v1.md
+++ b/docs/api/v1.md
@@ -13,7 +13,7 @@
 ```javascript
 import Api from "@softvisio/core/api";
 
-const api = new Api( "wss://localhost/api/" )
+const api = new Api( "wss://localhost/api/" );
 ```
 
 #### **HTTP**
@@ -22,7 +22,7 @@ const api = new Api( "wss://localhost/api/" )
 ```javascript
 import Api from "@softvisio/core/api";
 
-const api = new Api( "https://localhost/api/" )
+const api = new Api( "https://localhost/api/" );
 ```
 
 <!-- tabs:end -->
