--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -13,7 +13,7 @@
 ```javascript
 import Api from "@softvisio/core/api";
 
-const api = new Api( "ws://localhost/api/" )
+const api = new Api( "ws://localhost/api/" );
 ```
 
 #### **HTTP**
@@ -22,7 +22,7 @@ const api = new Api( "ws://localhost/api/" )
 ```javascript
 import Api from "@softvisio/core/api";
 
-const api = new Api( "http://localhost/api/" )
+const api = new Api( "http://localhost/api/" );
 ```
 
 <!-- tabs:end -->
