chore: update docs

--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -52,11 +52,23 @@ curl \
 <details>
     <summary>JSON schema</summary>
 
+<!-- tabs:start -->
+
+#### **JSON**
+
 ```json
 {
     "type": "string"
 }
 ```
+
+#### **YAML**
+
+```yaml
+type: string
+```
+
+<!-- tabs:end -->
 
 </details>
 
@@ -87,12 +99,25 @@ curl \
 <details>
     <summary>JSON schema</summary>
 
+<!-- tabs:start -->
+
+#### **JSON**
+
 ```json
 {
     "type": "string",
     "fotmat": "kebab-case"
 }
 ```
+
+#### **YAML**
+
+```yaml
+type: string
+fotmat: kebab-case
+```
+
+<!-- tabs:end -->
 
 </details>
 
@@ -101,6 +126,10 @@ curl \
 <details>
     <summary>JSON schema</summary>
 
+<!-- tabs:start -->
+
+#### **JSON**
+
 ```json
 {
     "type": "integer",
@@ -108,12 +137,25 @@ curl \
 }
 ```
 
+#### **YAML**
+
+```yaml
+type: integer
+format: ip-port
+```
+
+<!-- tabs:end -->
+
 </details>
 
 - `options` {Object}
 
 <details>
     <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
 
 ```json
 {
@@ -182,6 +224,59 @@ curl \
 }
 ```
 
+#### **YAML**
+
+```yaml
+type: object
+properties:
+    upstreamProxyProtocol:
+        type: boolean
+    servers:
+        type: array
+        minItems: 1
+        items:
+            type: object
+            properties:
+                port:
+                    type: integer
+                    format: ip-port
+                type:
+                    enum:
+                        - http
+                        - tcp
+                        - udp
+                serverName:
+                    anyOf:
+                        - type: "null"
+                        - type: string
+                          format: nginx-server-name
+                        - type: array
+                          items:
+                              type: string
+                              format: nginx-server-name
+                          minItems: 1
+                          uniqueItems: true
+                sslEnabled:
+                    type: boolean
+                maxBodySize:
+                    type: string
+                    format: digital-size
+                cacheEnabled:
+                    type: boolean
+                cacheBypass:
+                    type: boolean
+                proxyProtocol:
+                    type: boolean
+            additionalProperties: false
+            required:
+                - port
+additionalProperties: false
+required:
+    - servers
+```
+
+<!-- tabs:end -->
+
 </details>
 
 ## Test
@@ -231,11 +326,23 @@ curl \
 <details>
     <summary>JSON schema</summary>
 
+<!-- tabs:start -->
+
+#### **JSON**
+
 ```json
 {
     "type": "string"
 }
 ```
+
+#### **YAML**
+
+```yaml
+type: string
+```
+
+<!-- tabs:end -->
 
 </details>
 
@@ -244,11 +351,23 @@ curl \
 <details>
     <summary>JSON schema</summary>
 
+<!-- tabs:start -->
+
+#### **JSON**
+
 ```json
 {
     "type": "object"
 }
 ```
+
+#### **YAML**
+
+```yaml
+type: object
+```
+
+<!-- tabs:end -->
 
 </details>
 
@@ -281,6 +400,10 @@ curl \
 <details>
     <summary>JSON schema</summary>
 
+<!-- tabs:start -->
+
+#### **JSON**
+
 ```json
 {
     "type": "object",
@@ -299,5 +422,25 @@ curl \
     "required": ["file"]
 }
 ```
+
+#### **YAML**
+
+```yaml
+type: object
+properties:
+    file:
+        file:
+            maxSize: "52428800"
+            contentType:
+                - text/plain
+                - text/html
+    options:
+        type: object
+additionalProperties: false
+required:
+    - file
+```
+
+<!-- tabs:end -->
 
 </details>
