chore: refactor mime

--- a/docs/api/v1.md
+++ b/docs/api/v1.md
@@ -74,13 +74,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -122,7 +137,12 @@ curl \
                 "sortable": true
             }
         },
-        "order_by": [["email", "desc"]],
+        "order_by": [
+            [
+                "email",
+                "desc"
+            ]
+        ],
         "limit": {
             "maxLimit": 50
         }
@@ -201,13 +221,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -236,7 +271,12 @@ curl \
                 "operator": "includes case insensitive"
             }
         },
-        "order_by": [["email", "desc"]],
+        "order_by": [
+            [
+                "email",
+                "desc"
+            ]
+        ],
         "offset": false,
         "limit": {
             "maxLimit": 20
@@ -1165,7 +1205,11 @@ type: integer
 
 ```json
 {
-    "enum": ["1 hour", "7 days", "30 days"]
+    "enum": [
+        "1 hour",
+        "7 days",
+        "30 days"
+    ]
 }
 ```
 
@@ -1303,7 +1347,11 @@ type: integer
 
 ```json
 {
-    "enum": ["1 hour", "7 days", "30 days"]
+    "enum": [
+        "1 hour",
+        "7 days",
+        "30 days"
+    ]
 }
 ```
 
@@ -1358,13 +1406,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -1391,7 +1454,12 @@ curl \
                 "sortable": true
             }
         },
-        "order_by": [["date", "desc"]],
+        "order_by": [
+            [
+                "date",
+                "desc"
+            ]
+        ],
         "limit": {
             "maxLimit": 100
         }
@@ -1653,13 +1721,19 @@ type: string
                 }
             },
             "additionalProperties": false,
-            "required": ["password"]
+            "required": [
+                "password"
+            ]
         },
         {
             "type": "object",
             "properties": {
                 "oauth_provider": {
-                    "enum": ["google", "facebook", "github"]
+                    "enum": [
+                        "google",
+                        "facebook",
+                        "github"
+                    ]
                 },
                 "oauth_code": {
                     "type": "string"
@@ -1670,7 +1744,11 @@ type: string
                 }
             },
             "additionalProperties": false,
-            "required": ["oauth_provider", "oauth_code", "oauth_redirect_uri"]
+            "required": [
+                "oauth_provider",
+                "oauth_code",
+                "oauth_redirect_uri"
+            ]
         }
     ]
 }
@@ -1945,10 +2023,16 @@ curl \
             ]
         },
         "forceLocale": {
-            "type": ["null", "boolean"]
+            "type": [
+                "null",
+                "boolean"
+            ]
         },
         "detectLocaleByClientIpAddress": {
-            "type": ["null", "boolean"]
+            "type": [
+                "null",
+                "boolean"
+            ]
         }
     },
     "additionalProperties": false
@@ -2059,13 +2143,20 @@ curl \
                 }
             },
             "additionalProperties": false,
-            "required": ["email", "password"]
+            "required": [
+                "email",
+                "password"
+            ]
         },
         {
             "type": "object",
             "properties": {
                 "oauth_provider": {
-                    "enum": ["google", "facebook", "github"]
+                    "enum": [
+                        "google",
+                        "facebook",
+                        "github"
+                    ]
                 },
                 "oauth_code": {
                     "type": "string"
@@ -2076,7 +2167,11 @@ curl \
                 }
             },
             "additionalProperties": false,
-            "required": ["oauth_provider", "oauth_code", "oauth_redirect_uri"]
+            "required": [
+                "oauth_provider",
+                "oauth_code",
+                "oauth_redirect_uri"
+            ]
         }
     ]
 }
@@ -2162,13 +2257,19 @@ curl \
                 }
             },
             "additionalProperties": false,
-            "required": ["password"]
+            "required": [
+                "password"
+            ]
         },
         {
             "type": "object",
             "properties": {
                 "oauth_provider": {
-                    "enum": ["google", "facebook", "github"]
+                    "enum": [
+                        "google",
+                        "facebook",
+                        "github"
+                    ]
                 },
                 "oauth_code": {
                     "type": "string"
@@ -2179,7 +2280,11 @@ curl \
                 }
             },
             "additionalProperties": false,
-            "required": ["oauth_provider", "oauth_code", "oauth_redirect_uri"]
+            "required": [
+                "oauth_provider",
+                "oauth_code",
+                "oauth_redirect_uri"
+            ]
         }
     ]
 }
@@ -2283,7 +2388,11 @@ curl \
             "type": "object",
             "properties": {
                 "oauth_provider": {
-                    "enum": ["google", "facebook", "github"]
+                    "enum": [
+                        "google",
+                        "facebook",
+                        "github"
+                    ]
                 },
                 "oauth_code": {
                     "type": "string"
@@ -2294,7 +2403,11 @@ curl \
                 }
             },
             "additionalProperties": false,
-            "required": ["oauth_provider", "oauth_code", "oauth_redirect_uri"]
+            "required": [
+                "oauth_provider",
+                "oauth_code",
+                "oauth_redirect_uri"
+            ]
         }
     ]
 }
@@ -2762,14 +2875,21 @@ curl \
             "type": "string"
         },
         "channel": {
-            "enum": ["internal", "email", "telegram", "push"]
+            "enum": [
+                "internal",
+                "email",
+                "telegram",
+                "push"
+            ]
         },
         "subscribed": {
             "type": "boolean"
         }
     },
     "additionalProperties": false,
-    "required": ["subscribed"]
+    "required": [
+        "subscribed"
+    ]
 }
 ```
 
@@ -2836,13 +2956,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -2865,7 +3000,12 @@ curl \
                 "operator": "="
             }
         },
-        "order_by": [["created", "desc"]],
+        "order_by": [
+            [
+                "created",
+                "desc"
+            ]
+        ],
         "limit": {
             "maxLimit": 100
         }
@@ -2948,7 +3088,9 @@ curl \
             },
             "additionalProperties": false,
             "minProperties": 2,
-            "required": ["id"]
+            "required": [
+                "id"
+            ]
         }
     ]
 }
@@ -3087,13 +3229,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -3133,7 +3290,12 @@ curl \
                 "sortable": true
             }
         },
-        "order_by": [["name", "asc"]],
+        "order_by": [
+            [
+                "name",
+                "asc"
+            ]
+        ],
         "limit": {
             "maxLimit": 100
         }
@@ -3385,13 +3547,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -3435,7 +3612,12 @@ curl \
                 "sortable": true
             }
         },
-        "order_by": [["email", "asc"]],
+        "order_by": [
+            [
+                "email",
+                "asc"
+            ]
+        ],
         "limit": {
             "maxLimit": 100
         }
@@ -4012,13 +4194,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -4080,7 +4277,12 @@ curl \
                 "sortable": true
             }
         },
-        "order_by": [["name", "asc"]],
+        "order_by": [
+            [
+                "name",
+                "asc"
+            ]
+        ],
         "limit": {
             "maxLimit": 100
         }
@@ -4183,13 +4385,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -4251,7 +4468,12 @@ curl \
                 "sortable": true
             }
         },
-        "order_by": [["name", "asc"]],
+        "order_by": [
+            [
+                "name",
+                "asc"
+            ]
+        ],
         "limit": {
             "maxLimit": 100
         }
@@ -4755,7 +4977,11 @@ aclResolver: telegram-bot
 
 ```json
 {
-    "enum": ["7 days", "3 months", "1 year"]
+    "enum": [
+        "7 days",
+        "3 months",
+        "1 year"
+    ]
 }
 ```
 
@@ -4838,17 +5064,23 @@ aclResolver: telegram-bot
             "type": "string",
             "minLength": 1,
             "maxLength": 64,
-            "transform": ["trim"]
+            "transform": [
+                "trim"
+            ]
         },
         "short_description": {
             "type": "string",
             "maxLength": 120,
-            "transform": ["trim"]
+            "transform": [
+                "trim"
+            ]
         },
         "description": {
             "type": "string",
             "maxLength": 512,
-            "transform": ["trim"]
+            "transform": [
+                "trim"
+            ]
         }
     },
     "minProperties": 1,
@@ -4928,13 +5160,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -4976,7 +5223,12 @@ curl \
                 "sortable": true
             }
         },
-        "order_by": [["last_user_created", "desc"]],
+        "order_by": [
+            [
+                "last_user_created",
+                "desc"
+            ]
+        ],
         "limit": {
             "maxLimit": 100
         }
@@ -5132,16 +5384,22 @@ aclResolver: telegram-bot
             "type": "string",
             "minLength": 1,
             "maxLength": 100,
-            "transform": ["trim"]
+            "transform": [
+                "trim"
+            ]
         },
         "description": {
             "type": "string",
             "maxLength": 10000,
-            "transform": ["trim"]
+            "transform": [
+                "trim"
+            ]
         }
     },
     "additionalProperties": false,
-    "required": ["name"]
+    "required": [
+        "name"
+    ]
 }
 ```
 
@@ -5255,7 +5513,11 @@ type: integer
 
 ```json
 {
-    "enum": ["7 days", "3 months", "1 year"]
+    "enum": [
+        "7 days",
+        "3 months",
+        "1 year"
+    ]
 }
 ```
 
@@ -5363,12 +5625,16 @@ type: integer
             "type": "string",
             "minLength": 1,
             "maxLength": 100,
-            "transform": ["trim"]
+            "transform": [
+                "trim"
+            ]
         },
         "description": {
             "type": "string",
             "maxLength": 10000,
-            "transform": ["trim"]
+            "transform": [
+                "trim"
+            ]
         }
     },
     "minProperties": 1,
@@ -5538,13 +5804,28 @@ curl \
         ```json
         {
             "where": {
-                "field_a": [">=", 100],
-                "field_b": ["!=", null],
-                "field_c": ["=", "string"]
+                "field_a": [
+                    ">=",
+                    100
+                ],
+                "field_b": [
+                    "!=",
+                    null
+                ],
+                "field_c": [
+                    "=",
+                    "string"
+                ]
             },
             "order_by": [
-                ["field_a", "asc"],
-                ["field_b", "desc"]
+                [
+                    "field_a",
+                    "asc"
+                ],
+                [
+                    "field_b",
+                    "desc"
+                ]
             ],
             "offset": 100,
             "limit": 50
@@ -5613,7 +5894,12 @@ curl \
                 "operator": "="
             }
         },
-        "order_by": [["username", "asc"]],
+        "order_by": [
+            [
+                "username",
+                "asc"
+            ]
+        ],
         "limit": {
             "maxLimit": 100
         }
@@ -5828,7 +6114,10 @@ curl \
 
 ```json
 {
-    "type": ["null", "integer"]
+    "type": [
+        "null",
+        "integer"
+    ]
 }
 ```
 
@@ -5887,7 +6176,9 @@ curl \
         }
     },
     "additionalProperties": false,
-    "required": ["file"]
+    "required": [
+        "file"
+    ]
 }
 ```
 
