--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -175,7 +175,11 @@ format: ip-port
                         "format": "ip-port"
                     },
                     "type": {
-                        "enum": ["http", "tcp", "udp"]
+                        "enum": [
+                            "http",
+                            "tcp",
+                            "udp"
+                        ]
                     },
                     "serverName": {
                         "anyOf": [
@@ -215,12 +219,16 @@ format: ip-port
                     }
                 },
                 "additionalProperties": false,
-                "required": ["port"]
+                "required": [
+                    "port"
+                ]
             }
         }
     },
     "additionalProperties": false,
-    "required": ["servers"]
+    "required": [
+        "servers"
+    ]
 }
 ```
 
@@ -411,7 +419,10 @@ curl \
         "file": {
             "file": {
                 "maxSize": "52428800",
-                "contentType": ["text/plain", "text/html"]
+                "contentType": [
+                    "text/plain",
+                    "text/html"
+                ]
             }
         },
         "options": {
@@ -419,7 +430,9 @@ curl \
         }
     },
     "additionalProperties": false,
-    "required": ["file"]
+    "required": [
+        "file"
+    ]
 }
 ```
 
