chore: fix maxSize

--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -27,6 +27,71 @@ const api = new Api( "http://localhost/api/" );
 
 ## Administration
 
+### Revoke current encryption key
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/administration/revoke-key" );
+```
+
+#### **Shell**
+
+```shell
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/administration/revoke-key"
+```
+
+<!-- tabs:end -->
+
+### Revoke current master key
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/administration/revoke-master-key", master_key? );
+```
+
+#### **Shell**
+
+```shell
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/administration/revoke-master-key"
+```
+
+<!-- tabs:end -->
+
+- `master_key?` {string}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "string"
+}
+```
+
+#### **YAML**
+
+```yaml
+type: string
+```
+
+<!-- tabs:end -->
+
+</details>
+
 ### Reset root user password
 
 <!-- tabs:start -->
@@ -418,7 +483,7 @@ curl \
     "properties": {
         "file": {
             "file": {
-                "maxSize": "52428800",
+                "maxSize": "50 MB",
                 "contentType": [
                     "text/plain",
                     "text/html"
@@ -443,7 +508,7 @@ type: object
 properties:
     file:
         file:
-            maxSize: "52428800"
+            maxSize: 50 MB
             contentType:
                 - text/plain
                 - text/html
