--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -246,6 +246,12 @@ format: ip-port
                             "udp"
                         ]
                     },
+                    "proxyProtocol": {
+                        "type": "boolean"
+                    },
+                    "ssl": {
+                        "type": "boolean"
+                    },
                     "serverName": {
                         "anyOf": [
                             {
@@ -266,9 +272,6 @@ format: ip-port
                             }
                         ]
                     },
-                    "sslEnabled": {
-                        "type": "boolean"
-                    },
                     "maxBodySize": {
                         "type": "string",
                         "format": "digital-size"
@@ -279,7 +282,15 @@ format: ip-port
                     "cacheBypass": {
                         "type": "boolean"
                     },
-                    "proxyProtocol": {
+                    "httpsRedirectPort": {
+                        "type": "integer",
+                        "format": "ip-port"
+                    },
+                    "hstsMaxAge": {
+                        "type": "string",
+                        "format": "interval"
+                    },
+                    "hstsSubdomains": {
                         "type": "boolean"
                     }
                 },
@@ -318,6 +329,10 @@ properties:
                         - http
                         - tcp
                         - udp
+                proxyProtocol:
+                    type: boolean
+                ssl:
+                    type: boolean
                 serverName:
                     anyOf:
                         - type: "null"
@@ -329,8 +344,6 @@ properties:
                               format: nginx-server-name
                           minItems: 1
                           uniqueItems: true
-                sslEnabled:
-                    type: boolean
                 maxBodySize:
                     type: string
                     format: digital-size
@@ -338,7 +351,13 @@ properties:
                     type: boolean
                 cacheBypass:
                     type: boolean
-                proxyProtocol:
+                httpsRedirectPort:
+                    type: integer
+                    format: ip-port
+                hstsMaxAge:
+                    type: string
+                    format: interval
+                hstsSubdomains:
                     type: boolean
             additionalProperties: false
             required:
