chore: add editorconfig yaml

--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -139,14 +139,14 @@ type: string
 
 ## Nginx
 
-### Add nginx proxy
+### Add nginx proxies
 
 <!-- tabs:start -->
 
 #### **JavaScript**
 
 ```javascript
-const res = await api.call( "/v1/nginx/add-proxy", proxy_id, upstream_port, options );
+const res = await api.call( "/v1/nginx/add-proxies", proxies );
 ```
 
 #### **Shell**
@@ -154,66 +154,12 @@ const res = await api.call( "/v1/nginx/add-proxy", proxy_id, upstream_port, opti
 ```shell
 curl \
     -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/nginx/add-proxy"
+    "http://localhost/api/v1/nginx/add-proxies"
 ```
 
 <!-- tabs:end -->
 
-- `proxy_id` {string}
-
-<details>
-    <summary>JSON schema</summary>
-
-<!-- tabs:start -->
-
-#### **JSON**
-
-```json
-{
-    "type": "string",
-    "fotmat": "kebab-case"
-}
-```
-
-#### **YAML**
-
-```yaml
-type: string
-fotmat: kebab-case
-```
-
-<!-- tabs:end -->
-
-</details>
-
-- `upstream_port` {integer}
-
-<details>
-    <summary>JSON schema</summary>
-
-<!-- tabs:start -->
-
-#### **JSON**
-
-```json
-{
-    "type": "integer",
-    "format": "ip-port"
-}
-```
-
-#### **YAML**
-
-```yaml
-type: integer
-format: ip-port
-```
-
-<!-- tabs:end -->
-
-</details>
-
-- `options` {Object}
+- `proxies` {Object}
 
 <details>
     <summary>JSON schema</summary>
@@ -225,86 +171,113 @@ format: ip-port
 ```json
 {
     "type": "object",
-    "properties": {
-        "upstreamProxyProtocol": {
-            "type": "boolean"
-        },
-        "servers": {
-            "type": "array",
-            "minItems": 1,
-            "items": {
-                "type": "object",
-                "properties": {
-                    "port": {
-                        "type": "integer",
-                        "format": "ip-port"
-                    },
-                    "type": {
-                        "enum": [
-                            "http",
-                            "tcp",
-                            "udp"
-                        ]
-                    },
-                    "proxyProtocol": {
-                        "type": "boolean"
-                    },
-                    "ssl": {
-                        "type": "boolean"
-                    },
-                    "serverName": {
-                        "anyOf": [
-                            {
-                                "type": "null"
-                            },
-                            {
-                                "type": "string",
-                                "format": "nginx-server-name"
-                            },
-                            {
-                                "type": "array",
-                                "items": {
-                                    "type": "string",
-                                    "format": "nginx-server-name"
-                                },
-                                "minItems": 1,
-                                "uniqueItems": true
-                            }
-                        ]
-                    },
-                    "maxBodySize": {
-                        "type": "string",
-                        "format": "digital-size"
-                    },
-                    "cacheEnabled": {
-                        "type": "boolean"
-                    },
-                    "cacheBypass": {
-                        "type": "boolean"
-                    },
-                    "httpsRedirectPort": {
-                        "type": "integer",
-                        "format": "ip-port"
-                    },
-                    "hstsMaxAge": {
-                        "type": "string",
-                        "format": "interval"
-                    },
-                    "hstsSubdomains": {
-                        "type": "boolean"
-                    }
-                },
-                "additionalProperties": false,
-                "required": [
-                    "port"
-                ]
-            }
-        }
+    "propertyNames": {
+        "type": "string",
+        "format": "kebab-case"
     },
-    "additionalProperties": false,
-    "required": [
-        "servers"
-    ]
+    "minProperties": 1,
+    "additionalProperties": {
+        "type": "object",
+        "properties": {
+            "upstreamPort": {
+                "type": "integer",
+                "format": "ip-port"
+            },
+            "upstreamProxyProtocol": {
+                "type": "boolean"
+            },
+            "serverNames": {
+                "anyOf": [
+                    {
+                        "type": "null"
+                    },
+                    {
+                        "type": "string",
+                        "format": "nginx-server-name"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string",
+                            "format": "nginx-server-name"
+                        },
+                        "minItems": 1,
+                        "uniqueItems": true
+                    }
+                ]
+            },
+            "servers": {
+                "type": "array",
+                "minItems": 1,
+                "items": {
+                    "type": "object",
+                    "properties": {
+                        "port": {
+                            "type": "integer",
+                            "format": "ip-port"
+                        },
+                        "type": {
+                            "enum": [
+                                "http",
+                                "tcp",
+                                "udp"
+                            ]
+                        },
+                        "proxyProtocol": {
+                            "type": "boolean"
+                        },
+                        "ssl": {
+                            "type": "boolean"
+                        },
+                        "maxBodySize": {
+                            "type": "string",
+                            "format": "digital-size"
+                        },
+                        "cacheEnabled": {
+                            "type": "boolean"
+                        },
+                        "cacheBypass": {
+                            "type": "boolean"
+                        },
+                        "httpsRedirectPort": {
+                            "anyOf": [
+                                {
+                                    "type": "null"
+                                },
+                                {
+                                    "type": "integer",
+                                    "format": "ip-port"
+                                }
+                            ]
+                        },
+                        "hstsMaxAge": {
+                            "anyOf": [
+                                {
+                                    "type": "null"
+                                },
+                                {
+                                    "type": "string",
+                                    "format": "interval"
+                                }
+                            ]
+                        },
+                        "hstsSubdomains": {
+                            "type": "boolean"
+                        }
+                    },
+                    "additionalProperties": false,
+                    "required": [
+                        "port"
+                    ]
+                }
+            }
+        },
+        "additionalProperties": false,
+        "required": [
+            "upstreamPort",
+            "servers"
+        ]
+    }
 }
 ```
 
@@ -312,64 +285,98 @@ format: ip-port
 
 ```yaml
 type: object
-properties:
-  upstreamProxyProtocol:
-    type: boolean
-  servers:
-    type: array
-    minItems: 1
-    items:
-      type: object
-      properties:
-        port:
-          type: integer
-          format: ip-port
-        type:
-          enum:
-            - http
-            - tcp
-            - udp
-        proxyProtocol:
-          type: boolean
-        ssl:
-          type: boolean
-        serverName:
-          anyOf:
-            - type: "null"
-            - type: string
-              format: nginx-server-name
-            - type: array
-              items:
-                type: string
-                format: nginx-server-name
-              minItems: 1
-              uniqueItems: true
-        maxBodySize:
-          type: string
-          format: digital-size
-        cacheEnabled:
-          type: boolean
-        cacheBypass:
-          type: boolean
-        httpsRedirectPort:
-          type: integer
-          format: ip-port
-        hstsMaxAge:
-          type: string
-          format: interval
-        hstsSubdomains:
-          type: boolean
-      additionalProperties: false
-      required:
-        - port
-additionalProperties: false
-required:
-  - servers
+propertyNames:
+  type: string
+  format: kebab-case
+minProperties: 1
+additionalProperties:
+  type: object
+  properties:
+    upstreamPort:
+      type: integer
+      format: ip-port
+    upstreamProxyProtocol:
+      type: boolean
+    serverNames:
+      anyOf:
+        - type: "null"
+        - type: string
+          format: nginx-server-name
+        - type: array
+          items:
+            type: string
+            format: nginx-server-name
+          minItems: 1
+          uniqueItems: true
+    servers:
+      type: array
+      minItems: 1
+      items:
+        type: object
+        properties:
+          port:
+            type: integer
+            format: ip-port
+          type:
+            enum:
+              - http
+              - tcp
+              - udp
+          proxyProtocol:
+            type: boolean
+          ssl:
+            type: boolean
+          maxBodySize:
+            type: string
+            format: digital-size
+          cacheEnabled:
+            type: boolean
+          cacheBypass:
+            type: boolean
+          httpsRedirectPort:
+            anyOf:
+              - type: "null"
+              - type: integer
+                format: ip-port
+          hstsMaxAge:
+            anyOf:
+              - type: "null"
+              - type: string
+                format: interval
+          hstsSubdomains:
+            type: boolean
+        additionalProperties: false
+        required:
+          - port
+  additionalProperties: false
+  required:
+    - upstreamPort
+    - servers
 ```
 
 <!-- tabs:end -->
 
 </details>
+
+### Delete nginx proxy upstream
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/nginx/delete-upstream" );
+```
+
+#### **Shell**
+
+```shell
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/nginx/delete-upstream"
+```
+
+<!-- tabs:end -->
 
 ## Test
 
